; ModuleID = '/home/carl/AnghaBench/timescaledb/src/net/extr_conn_plain.c_ts_plain_set_timeout.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/net/extr_conn_plain.c_ts_plain_set_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i32 }
%struct.timeval = type { i64, i64 }

@SOL_SOCKET = common dso_local global i32 0, align 4
@SO_RCVTIMEO = common dso_local global i32 0, align 4
@SO_SNDTIMEO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ts_plain_set_timeout(%struct.TYPE_3__* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.timeval, align 8
  %7 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = getelementptr inbounds %struct.timeval, %struct.timeval* %6, i32 0, i32 0
  %9 = load i64, i64* %5, align 8
  %10 = udiv i64 %9, 1000
  store i64 %10, i64* %8, align 8
  %11 = getelementptr inbounds %struct.timeval, %struct.timeval* %6, i32 0, i32 1
  %12 = load i64, i64* %5, align 8
  %13 = urem i64 %12, 1000
  %14 = mul i64 %13, 1000
  store i64 %14, i64* %11, align 8
  store i32 16, i32* %7, align 4
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = load i32, i32* @SOL_SOCKET, align 4
  %19 = load i32, i32* @SO_RCVTIMEO, align 4
  %20 = bitcast %struct.timeval* %6 to i8*
  %21 = load i32, i32* %7, align 4
  %22 = call i8* @setsockopt(i32 %17, i32 %18, i32 %19, i8* %20, i32 %21)
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  store i8* %22, i8** %24, align 8
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  %27 = load i8*, i8** %26, align 8
  %28 = icmp ne i8* %27, null
  br i1 %28, label %29, label %30

29:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %47

30:                                               ; preds = %2
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 8
  %34 = load i32, i32* @SOL_SOCKET, align 4
  %35 = load i32, i32* @SO_SNDTIMEO, align 4
  %36 = bitcast %struct.timeval* %6 to i8*
  %37 = load i32, i32* %7, align 4
  %38 = call i8* @setsockopt(i32 %33, i32 %34, i32 %35, i8* %36, i32 %37)
  %39 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 0
  store i8* %38, i8** %40, align 8
  %41 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %41, i32 0, i32 0
  %43 = load i8*, i8** %42, align 8
  %44 = icmp ne i8* %43, null
  br i1 %44, label %45, label %46

45:                                               ; preds = %30
  store i32 -1, i32* %3, align 4
  br label %47

46:                                               ; preds = %30
  store i32 0, i32* %3, align 4
  br label %47

47:                                               ; preds = %46, %45, %29
  %48 = load i32, i32* %3, align 4
  ret i32 %48
}

declare dso_local i8* @setsockopt(i32, i32, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
